derive/test/compile_fail/invalid_attr_newtype_field_index.stderr
error: proc-macro derive panicked
 --> compile_fail/invalid_attr_newtype_field_index.rs:4:10
  |
4 | #[derive(Value)]
  |          ^^^^^
  |
  = help: message: unsupported attribute `index` on newtype field
